fix: FileSystemPartitionedReader supports partial partition keys and PartitionSlice with observability logging